--- a/src/Style/styles.css
+++ b/src/Style/styles.css
@@ -1,72 +1,113 @@
-body,html{
-    margin: 0 !important;
-    padding: 0 !important;
-    height: 100vh;
-    background-color: rgb(226, 226, 226);
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
   }
-  .root{
-    height: 100vh;
+  html {
+    font-family: "Montserrat", sans-serif;
   }
-
-.keepnote{
-    float: left;
-    margin: 16px;
-    width: 240px;
-    padding: 10px;
-    background-color: #fff;
+  body {
+    background: #eee;
+    background-image: url("https://www.transparenttextures.com/patterns/cubes.png");
+    padding: 0 16px;
+  }
+  
+  header {
+    background-color: #f5ba13;
+    margin: auto -16px;
+    padding: 16px 32px;
+    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.3);
+  }
+  
+  header h1 {
+    color: #fff;
+    font-family: "McLaren", cursive;
+    font-weight: 200;
+  }
+  
+  footer {
+    position: absolute;
+    text-align: center;
+    bottom: 0;
+    width: 100%;
+    height: 2.5rem;
+  }
+  
+  footer p {
+    color: #ccc;
+  }
+  .note {
+    background: #fff;
+    border-radius: 7px;
     box-shadow: 0 2px 5px #ccc;
-    border-radius: 5px;
-}
-.keepnote h1{
+    padding: 10px;
+    width: 240px;
+    margin: 16px;
+    float: left;
+  }
+  .note h1 {
+    font-size: 1.1em;
     margin-bottom: 6px;
+  }
+  .note p {
     font-size: 1.1em;
-}
-.keepnote p{
     margin-bottom: 10px;
-    font-size: 1.1em;
     white-space: pre-wrap;
     word-wrap: break-word;
-}
-.para{
-    color: black;
-    text-align: left;
-}
-
-.header{
-    height: 70px;
+  }
+  
+  .note button {
+    position: relative;
+    float: right;
+    margin-right: 5px;
+    padding: 2px;
+    color: #f5ba13;
+    border: none;
+    width: fit-content;
+    height: 36px;
+    cursor: pointer;
+    outline: none;
+    border-radius: 5px;
+  }
+  
+  form.create-note {
+    position: relative;
+    width: 480px;
+    margin: 30px auto 20px auto;
+    background: #fff;
+    padding: 15px;
+    border-radius: 7px;
+    box-shadow: 0 1px 5px rgb(138, 137, 137);
+  }
+  form.create-note input,
+  form.create-note textarea {
     width: 100%;
-    background-color: #f5ba13;
-    color: white;
-    display: flex;
-    align-items: flex-end;
-    box-shadow: 0 0 10px 0 rgba(0,0,0,0.3);
-}
-.header h1{
-    font-size: 25px;
-    padding-left: 8px;
-    font-family: 'Merienda', cursive;
-}
-
-footer{
+    border: none;
+    padding: 4px;
+    outline: none;
+    font-size: 1.2em;
+    font-family: inherit;
+    resize: none;
+  }
+  form.create-note button {
     position: absolute;
-    bottom: 5px;
-    width: 100%;
-}
+    right: 18px;
+    bottom: -18px;
+    background: #f5ba13;
+    color: #fff;
+    border: none;
+    border-radius: 50%;
+    width: 36px;
+    height: 36px;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
+    cursor: pointer;
+    outline: none;
+  }
 
-footer p{
-    color: rgb(139, 139, 139);
-    text-align: center;
-}
 
-.body{
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-content: space-between;
-}
-Header{
-    height: 15vh;
-}
-Footer{
-    height: 10vh;
-}
+  h1::first-letter{
+    text-transform: uppercase;
+  }
+  p::first-letter{
+    text-transform: uppercase;
+  }
